# sprintFour

./: .gitignore  README.md  participant.md
conseal-batch-review/: README.md  run-backend.bat  start.ps1
conseal-batch-review/backend/: config.py  database.py  fix_future.py  fix_list.py  main.py  models.py  pyproject.toml  requirements.txt
conseal-batch-review/backend/dal/: __init__.py  category_stat_dal.py  decision_dal.py  document_dal.py  entity_queue_dal.py  pseudonym_dal.py  span_dal.py
conseal-batch-review/backend/routes/: audit.py  batch.py  documents.py  entity_queue.py  spans.py  upload.py
conseal-batch-review/backend/services/: cluster_service.py  detection_service.py  document_service.py  entity_queue_service.py  export_service.py  llm_tier_service.py  recalibration_service.py  sample_generator.py  span_service.py  upload_service.py
conseal-batch-review/frontend/: index.html  package-lock.json  package.json  vite.config.js
conseal-batch-review/frontend/src/: api.js  main.js
conseal-batch-review/frontend/src/pages/: audit-log.js  batch-queue.js  dashboard.js  document-review.js
conseal-batch-review/frontend/src/styles/: index.css
conseal-batch-review/scripts/: generate_data.py  generate_indian_batch.py
