[project]
name = "conseal-batch-review"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "aiosqlite==0.20.0",
    "pydantic==2.9.0",
    "python-multipart>=0.0.9",
    "pypdf>=4.3.1",
    "pymupdf>=1.24.0",
    "presidio-analyzer>=2.2.355",
    "presidio-anonymizer>=2.2.355",
    "spacy>=3.7.6,<4.0.0",
    "en-core-web-lg @ https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.8.0/en_core_web_lg-3.8.0-py3-none-any.whl",
    "gliner>=0.2.0",
    "phonenumbers>=8.12",
    "aiohttp>=3.9.0",
    "pytesseract>=0.3.13",
    "pillow>=12.2.0",
]

[tool.uv]
package = false
